<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#5cdb5e"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        android:padding="10dp"
        android:gravity="center"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="30dp"
            android:text="@string/biodata"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/namaku" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/kelas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:text="NIM : 200602094" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/jurusan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/hobi"
            />

    </LinearLayout>

</LinearLayout>